Completed null marking of `io.muserver` package